syntax = "proto3";

option csharp_namespace = "Common.Protobuf";

import "CombatInvokeEntry.proto";

// Name: AGBJEGIMDLE
// CmdId: 387
message CombatInvocationsNotify {
    repeated CombatInvokeEntry invoke_list = 3;
}

