syntax = "proto3";

option csharp_namespace = "Common.Protobuf";

import "CombatTypeArgument.proto";
import "ForwardType.proto";

// Name: BEGHMDLHHND
message CombatInvokeEntry {
    CombatTypeArgument argument_type = 6;
    ForwardType forward_type = 13;
    bytes combat_data = 7;
}

