syntax = "proto3";

option csharp_namespace = "Common.Protobuf";

import "AttackResult.proto";

// Name: IHBAACKKKEC
message EvtBeingHitInfo {
    uint32 frame_num = 1;
    AttackResult attack_result = 8;
    uint32 peer_id = 3;
}

