syntax = "proto3";

option csharp_namespace = "Common.Protobuf";


// Name: CBHNFOKCIKG
message UnionCmd {
    bytes body = 1;
    uint32 message_id = 5;
}

